crates/ty_ide/src/snapshots/ty_ide__signature_help__tests__signature_help_literal_list_after_keyword.snap
---
source: crates/ty_ide/src/signature_help.rs
expression: test.signature_help_render()
---

============== active signature =============
(x: int, *, y: int) -> Unknown
---------------------------------------------

-------------- active parameter -------------
x: int
---------------------------------------------
